[project]
name = "enocean_async"
version = "0.13.5-dev0"
authors = [
  { name="Henning Kerstan", email="mail@henningkerstan.de" },
]
description = "An async implementation of the EnOcean Serial Protocol Version 3."
readme = "README.md"
requires-python = ">=3.14"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Development Status :: 4 - Beta"
]
license = "Apache-2.0"
license-files = ["LICENSE*"]
dependencies = [
  "serialx>=1.2.2"
]

[project.urls]
Homepage = "https://github.com/henningkerstan/enocean-async"
Issues = "https://github.com/henningkerstan/enocean-async/issues"

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
readme = { file = [ "README.md" ], content-type = "text/markdown" }

[tool.setuptools.packages.find]
where = [ "." ]
include = [ "enocean_async*" ]

[tool.setuptools.package-data]
"enocean_async" = [ "*.xml", "py.typed" ]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true


[tool.ruff]
target-version="py314"
required-version = ">=0.13.0"

[tool.ruff.lint]
select = ["I"]

[tool.ruff.lint.isort]
force-sort-within-sections = true
known-first-party = ["enocean_async"]
combine-as-imports = true
split-on-trailing-comma = false
case-sensitive = true

[tool.bumpversion]
current_version = "0.13.5-dev0"
parse = """(?x)
    (?P<major>\\d+)\\.
    (?P<minor>\\d+)\\.
    (?P<patch>\\d+)
    (?:
        -(?P<pre_l>[a-zA-Z]+)
        (?P<distance_to_latest_tag>\\d+)
    )?
"""
serialize = [
    "{major}.{minor}.{patch}-{pre_l}{distance_to_latest_tag}",
    "{major}.{minor}.{patch}",
]
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
ignore_missing_files = false
tag = false
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = true
commit = true
message = "Bump version: {current_version} → {new_version}"
moveable_tags = []
commit_args = "--no-verify"
setup_hooks = []
pre_commit_hooks = []
post_commit_hooks = []

[tool.bumpversion.parts.pre_l]
values = ["dev", "final"]
optional_value = "final"

# Update version in __init__.py
[[tool.bumpversion.files]]
filename = "enocean_async/__init__.py"

# Update date in __init__.py
[[tool.bumpversion.files]]
filename = 'enocean_async/__init__.py'
search = "__date__ = \"\\d{{4}}-\\d{{2}}-\\d{{2}}\""
replace = "__date__ = \"{now:%Y-%m-%d}\""
regex = true